# attitude_orbit_simulator

./: .clang-format  .clang-tidy  .clangd  .gitignore  CMakeLists.txt  MODEL.md  MODEL.tex  MODEL_EX.md  README.md  analyze.py  conanfile.txt  hysteresis.py  inspector.py  main.cpp  materials.csv  monte_carlo.py  parameter_sweep.py  plot.py  plot_attitude_verify.py  plot_dynamics.py  plot_hysteresis.py  plot_orbit_verify.py  plot_verify.py  sample.toml  sample_short.toml  simulate.py  target.toml  verify.py
aos/components/: hysteresis_rod.cpp  hysteresis_rod.hpp
aos/core/: state.hpp
aos/environment/: environment.hpp
aos/simulation/: dynamics.hpp
aos/verify/: hysteresis.hpp
experimental/: combine.py  combine_hysteresis.py  combine_rv.py  vis.py  vis2.py
other/: inertia.hpp  main.cpp  orbit.hpp  rfk45.hpp
results/: hymu80_hysteresis.csv  hymu80_hysteresis_curve_2.csv  sim.sh  sim_2y.sh  tns0_curve.csv  tns0_sim.sh  tns0_validation.csv
source/: main.cpp  verify_hysteresis.cpp  verify_simulation.cpp
source/aos/: cli.cpp  cli.hpp
source/aos/components/: hysteresis_rod.cpp  hysteresis_rod.hpp  hysteresis_rods.cpp  hysteresis_rods.hpp  inertia_tensor.cpp  inertia_tensor.hpp  permanent_magnet.cpp  permanent_magnet.hpp  spacecraft.cpp  spacecraft.hpp  spacecraft_face.cpp  spacecraft_face.hpp  spacecraft_faces.cpp  spacecraft_faces.hpp  spacecraft_shape.cpp  spacecraft_shape.hpp
source/aos/components/details/: spacecraft_impl.cpp  spacecraft_impl.hpp
source/aos/core/: constants.hpp  state.cpp  state.hpp  types.hpp
source/aos/environment/: environment.cpp  environment.hpp  nrlmsise.cpp  nrlmsise.hpp  orbital_mechanics.cpp  orbital_mechanics.hpp  space_weather.cpp  space_weather.hpp
source/aos/environment/details/: environment_impl.cpp  environment_impl.hpp
source/aos/simulation/: config.cpp  config.hpp  dynamics.cpp  dynamics.hpp  observer.cpp  observer.hpp  simulation.cpp  simulation.hpp  spacecraft_dynamics.cpp  spacecraft_dynamics.hpp
source/aos/simulation/details/: dynamics_impl.cpp  dynamics_impl.hpp  observer_impl.cpp  observer_impl.hpp
source/aos/verify/: attitude.cpp  attitude.hpp  bh_observer.cpp  bh_observer.hpp  hysteresis.cpp  hysteresis.hpp  hysteresis_loop_dynamics.cpp  hysteresis_loop_dynamics.hpp  hysteresis_observer.cpp  hysteresis_observer.hpp  observers.cpp  observers.hpp  orbit.cpp  orbit.hpp  verification_observer.cpp  verification_observer.hpp
source/aos/verify/details/: verification_observer_impl.cpp  verification_observer_impl.hpp
targets/: amorphous_co.toml  amorphous_fe.toml  fe50ni50.toml  finement.toml  permalloy.toml  vacodur50.toml
targets/special/: amorphous_co_rv2.toml  amorphous_co_rv4.toml  amorphous_fe_rv1.toml  amorphous_fe_rv5.toml  amorphous_fe_rv5_mr13.toml  amorphous_fe_rv5_mr16.toml  fe50ni50_rv1.toml  fe50ni50_rv2.toml  finement_rv11.toml  finement_rv16.toml  permalloy_rv1.toml  permalloy_rv3.toml  permalloy_rv3_mr11.toml  permalloy_rv3_mr3.toml  permalloy_rv9.toml  vacodur50_rv8.toml  vacodur50_rv8_mr12.toml  vacodur50_rv8_mr19.toml
tests/: .clang-tidy  environment_test.cpp  hysteresis_rod_test.cpp  hysteresis_rod_verify.py  permanent_magnet_test.cpp  simulation_test.cpp  system_state_test.cpp
